[tool.poetry]
name = "agent-testing"
version = "0.1.0"
description = "Testing an Agent by exercising its protocols using pytest"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Char Howland <char@indicio.tech"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
