[tool.poetry]
name = "agent-testing"
version = "0.1.0"
description = "Testing an Agent by exercising its protocols using pytest"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Char Howland <char@indicio.tech"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
pytest = "^6.2.4"
aries-staticagent = "^0.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.5b2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
